src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <description>Account owner&apos;s manager email to be used for email alert purposes</description>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mapping_Vendor__c</fullName>
        <label>Mapping Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Cassidian</fullName>
                </value>
                <value>
                    <fullName>CIS Systems</fullName>
                </value>
                <value>
                    <fullName>Code 3 Software</fullName>
                </value>
                <value>
                    <fullName>Code Red</fullName>
                </value>
                <value>
                    <fullName>Cody</fullName>
                </value>
                <value>
                    <fullName>Commerx Corporation</fullName>
                </value>
                <value>
                    <fullName>ComnetiX</fullName>
                </value>
                <value>
                    <fullName>Computer Investment Advice, Inc.</fullName>
                </value>
                <value>
                    <fullName>CORE 911</fullName>
                </value>
                <value>
                    <fullName>Corporate Technologies, LLC</fullName>
                </value>
                <value>
                    <fullName>Crime Gog Technologies</fullName>
                </value>
                <value>
                    <fullName>CrimeStar</fullName>
                </value>
                <value>
                    <fullName>CR Management, Inc.</fullName>
                </value>
                <value>
                    <fullName>CTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mapping__c</fullName>
        <label>Mapping Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Map_Update__c</fullName>
        <label>Market Map Update</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Tier__c</fullName>
        <label>Market Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Account_Type__c</fullName>
        <label>xMaster Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Multi-Agency Co-located</fullName>
                </value>
                <value>
                    <fullName>Multi-Agency Consolidated</fullName>
                </value>
                <value>
                    <fullName>Partner/Vendor</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Name__c</fullName>
        <label>Master Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Target__c</fullName>
        <label>Migration Target</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_BA_Email__c</fullName>
        <label>Mobile BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Go_Live_Date__c</fullName>
        <inlineHelpText>TriTech Client CAD Go Live date</inlineHelpText>
        <label>Mobile Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_Installed_Year__c</fullName>
        <label>Mobile Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Vendor__c</fullName>
        <label>Mobile Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Cassidian</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>CIS Systems</fullName>
                </value>
                <value>
                    <fullName>Code 3 Software</fullName>
                </value>
                <value>
                    <fullName>Code Red</fullName>
                </value>
                <value>
                    <fullName>Cody</fullName>
                </value>
                <value>
                    <fullName>Commerx Corporation</fullName>
                </value>
                <value>
                    <fullName>ComnetiX</fullName>
                </value>
                <value>
                    <fullName>Computer Investment Advice, Inc.</fullName>
                </value>
                <value>
                    <fullName>Copsync</fullName>
                </value>
                <value>
                    <fullName>CORE 911</fullName>
                </value>
                <value>
                    <fullName>Corporate Technologies, LLC</fullName>
                </value>
                <value>
                    <fullName>Crime Gog Technologies</fullName>
                </value>
                <value>
                    <fullName>CRIMES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_jurisdictional_system__c</fullName>
        <description>Field included in trigger to calculate Account Score</description>
        <label>Multi-jurisdictional system?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Expiration__c</fullName>
        <label>NDA Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Location__c</fullName>
        <label>NDA Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NDA_in_Place__c</fullName>
        <label>NDA in Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Survey_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This populates the contact who is associated to the most recent NPS survey response.</description>
        <inlineHelpText>This populates the contact who is associated to the most recent NPS survey response.</inlineHelpText>
        <label>NPS Survey Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (NPS Survey Contact)</relationshipLabel>
        <relationshipName>NPSSurveyContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nearby_Airports_and_Hotels__c</fullName>
        <inlineHelpText>To assist all TriTech employees who may visit this account, list nearby airports and hotels.</inlineHelpText>
        <label>Nearby Airports and Hotels</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NetSuite_ID__c</fullName>
        <description>Zuercher NetSuite ID</description>
        <label>xNetSuite ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sworn_Officers_Band__c</fullName>
        <label>Number of Sworn Officers Band</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-9</fullName>
                </value>
                <value>
                    <fullName>10-99</fullName>
                </value>
                <value>
                    <fullName>100-249</fullName>
                </value>
                <value>
                    <fullName>250-999</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Sworn_Personnel_WMP__c</fullName>
        <description>Field is currently locked down to read only to all users except for sys admins and users with the &quot;Account_Sworn Counts and Hierarchy Changes&quot; permission set associated to their user record.</description>
        <label>Number of Sworn Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORI_FDID__c</fullName>
        <label>ORI/FDID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_1_Email__c</fullName>
        <label>PM 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM_2_Email__c</fullName>
        <label>PM 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSAP_or_Individual_agency_sworn_Band__c</fullName>
        <label>PSAP or Individual agency sworn Band</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1000+</fullName>
                </value>
                <value>
                    <fullName>250-999</fullName>
                </value>
                <value>
                    <fullName>100-249</fullName>
                </value>
                <value>
                    <fullName>10-99</fullName>
                </value>
                <value>
                    <fullName>1-9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account_Long_ID_2__c</fullName>
        <formula>Parent.Parent.Account_Long_ID__c</formula>
        <label>Parent Account Long ID 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Long_ID_3__c</fullName>
        <formula>Parent.Parent.Parent.Account_Long_ID__c</formula>
        <label>Parent Account Long ID 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Long_ID_4__c</fullName>
        <formula>Parent.Parent.Parent.Parent.Account_Long_ID__c</formula>
        <label>Parent Account Long ID 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Long_ID__c</fullName>
        <formula>Parent.Account_Long_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_of_Sworn_Officers_2__c</fullName>
        <formula>Parent.Parent.Number_of_Sworn_Personnel_WMP__c</formula>
        <label>Parent Account # of Sworn Officers 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account_of_Sworn_Officers_3__c</fullName>
        <formula>Parent.Parent.Parent.Number_of_Sworn_Personnel_WMP__c</formula>
        <label>Parent Account # of Sworn Officers 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account_of_Sworn_Officers_4__c</fullName>
        <formula>Parent.Parent.Parent.Parent.Number_of_Sworn_Personnel_WMP__c</formula>
        <label>Parent Account # of Sworn Officers 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account_of_Sworn_Officers__c</fullName>
        <formula>Parent.Number_of_Sworn_Personnel_WMP__c</formula>
        <label>Parent Account # of Sworn Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Active_Client_Product_Families__c</fullName>
        <label>Parent Active Client Product Families</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Active_Contract_Types__c</fullName>
        <label>Parent Active Contract Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Info_Not_Validated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Parent Info Not Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planning_to_replace_911_provider__c</fullName>
        <description>Field included in trigger to calculate Account Score</description>
        <label>Planning to replace 911 provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-2 Years to Decision</fullName>
                    <label>2017</label>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2-4 Years to Decision</fullName>
                    <label>2019</label>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>4-6 Years to Decision</fullName>
                    <label>2021</label>
                </value>
                <value>
                    <fullName>&gt; 6 Years to decision</fullName>
                    <label>2023</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_to_replace_CAD_provider__c</fullName>
        <description>Field included in trigger to calculate Account Score</description>
        <label>Planning to replace CAD provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-2 Years to Decision</fullName>
                    <label>2017</label>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2-4 Years to Decision</fullName>
                    <label>2019</label>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>4-6 Years to Decision</fullName>
                    <label>2021</label>
                </value>
                <value>
                    <fullName>&gt; 6 Years to decision</fullName>
                    <label>2023</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_to_replace_Jail_provider__c</fullName>
        <description>Field included in trigger to calculate Account Score</description>
        <label>Planning to replace Jail provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-2 Years to Decision</fullName>
                    <label>2017</label>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2-4 Years to Decision</fullName>
                    <label>2019</label>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>4-6 Years to Decision</fullName>
                    <label>2021</label>
                </value>
                <value>
                    <fullName>&gt; 6 Years to decision</fullName>
                    <label>2023</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_to_replace_RMS_provider__c</fullName>
        <description>Field included in trigger to calculate Account Score</description>
        <label>Planning to replace RMS provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-2 Years to Decision</fullName>
                    <label>2017</label>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2-4 Years to Decision</fullName>
                    <label>2019</label>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>4-6 Years to Decision</fullName>
                    <label>2021</label>
                </value>
                <value>
                    <fullName>&gt; 6 Years to decision</fullName>
                    <label>2023</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Population_Served__c</fullName>
        <label>Population Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Population_of_Area_Served_WMP__c</fullName>
        <label>Population of Area Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Go_Live_Admin_Satisfaction_Survey__c</fullName>
        <label>Post Go Live Admin Satisfaction Survey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Go_Live_Survey_Comments__c</fullName>
        <label>Post Go Live Survey Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Go_Live_User_Satisfaction_Survey__c</fullName>
        <label>Post Go Live User Satisfaction Survey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_deal_size_of_this_opportunity__c</fullName>
        <description>Field included in trigger to calculate Account Score</description>
        <label>Potential deal size of this opportunity?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;$2 Million</fullName>
                </value>
                <value>
                    <fullName>$1 Million - $1.9 Million</fullName>
                </value>
                <value>
                    <fullName>$500K - $.9 Million</fullName>
                </value>
                <value>
                    <fullName>$0 - $499K</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family_WMP__c</fullName>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>ETI</fullName>
                </value>
                <value>
                    <fullName>ETI 911</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>LETG</fullName>
                </value>
                <value>
                    <fullName>Omega</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>VisiNet</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>ProdFam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <formula>IF (of_Open_Opportunities__c &gt;=1 &amp;&amp;  Client__c == false, true, false)</formula>
        <inlineHelpText>Prospect = Account is not currently a client but has open opportunities</inlineHelpText>
        <label>Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quest_ID_WMP__c</fullName>
        <label>Legacy Account ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_BA_Email__c</fullName>
        <label>RMS BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RMS_Go_Live_Date__c</fullName>
        <label>RMS Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Installed_Year__c</fullName>
        <label>Law RMS Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_Jail_Support_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMS/Jail Support Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsIer7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMS_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Utilized to indicate the Agency&apos;s RMS Parent Account</inlineHelpText>
        <label>RMS Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMS_Parent_Total_Sworn_Officers__c</fullName>
        <label>RMS Parent Total Sworn Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>